add titlecase pipe

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -13,7 +13,7 @@
           (click)="changeSearch(header)"
           [ngClass]="{'selected': searchKey === header}"
           class="button">
-          {{ header }}
+          {{ header | titlecase}}
         </button>
       </div>
     </div>
